--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   <title>Treino Monstro</title>
 
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.png" type="image/png" />
+
+  <!-- Thumbnail Open Graph (para redes sociais) -->
+  <meta property="og:title" content="Treino Monstro" />
+  <meta property="og:description" content="Site de Treino A/B com contadores e tracker." />
+  <meta property="og:image" content="thumbnail.png" />
+  <meta property="og:url" content="https://seudominio.com/treino-monstro" />
+
   <!-- CSS externo -->
   <link rel="stylesheet" href="style.css">
 </head>
@@ -16,16 +25,12 @@
 
   <!-- HEADER FLUTUANTE -->
   <header id="mainHeader">
-    <div class="header-title">Treino Monstro</div>
+    <div class="header-title">
+      Treino Monstro <span class="header-version">v1.3.0</span>
+    </div>
     <div class="brand-buttons">
-      <!-- NOVO Botão "Changelog" (esquerda) -->
-      <button class="brand-button" onclick="abrirChangelog()">
-        <img 
-          src="https://cdn-icons-png.flaticon.com/512/1361/1361897.png" 
-          alt="Changelog"
-          style="object-fit:contain;"
-        />
-      </button>
+      <!-- Botão "Changelog" (sem ícone) -->
+      <button class="brand-button" onclick="abrirChangelog()">Changelog</button>
 
       <!-- Botões GymRats / Spotify -->
       <button class="brand-button" onclick="abrirGymrats()">
@@ -46,8 +51,8 @@
     <div class="modal-content">
       <h2>Atenção!</h2>
       <p>Para trocar de Treino, você precisa pausar o treino atual primeiro. Deseja pausar agora?</p>
-      <button onclick="pausarAgora()">Pausar Agora</button>
-      <button onclick="cancelarTrocaTreino()">Cancelar</button>
+      <button class="round-btn" onclick="pausarAgora()">Pausar Agora</button>
+      <button class="round-btn" onclick="cancelarTrocaTreino()">Cancelar</button>
     </div>
   </div>
 
@@ -56,10 +61,9 @@
     <div class="modal-congrats-content">
       <h2>Parabéns, treino concluído!</h2>
       <p>Não esqueça de tirar uma foto, afinal se não tem foto, não conta!</p>
-      <!-- NOVO botão Exportar dentro da modal -->
-      <button onclick="exportarCSV()">Exportar</button>
-      <button onclick="fecharCongrats()">Fechar</button>
-      <button onclick="abrirCamera()">Abrir Câmera</button>
+      <button class="round-btn" onclick="exportarCSV()">Exportar</button>
+      <button class="round-btn" onclick="fecharCongrats()">Fechar</button>
+      <button class="round-btn" onclick="abrirCamera()">Abrir Câmera</button>
     </div>
   </div>
 
@@ -68,19 +72,40 @@
     <div class="modal-content">
       <h2>Changelog</h2>
       <div id="changelogBody" style="text-align:left;">
-        <!-- Vamos injetar via script ou pode colocar fixo -->
         <p><strong>Versão 1.0</strong><br/>
         - Lançamento inicial do Treino Monstro</p>
         <hr/>
         <p><strong>Versão 1.1</strong><br/>
-        - Adicionadas novas funcionalidades no contador<br/>
-        - Correções no tracker</p>
+        - Adicionados contadores de exercício e descanso<br/>
+        - Correções de layout no tracker</p>
         <hr/>
         <p><strong>Versão 1.2</strong><br/>
-        - Layout mobile melhorado<br/>
-        - Countdown com fundo branco e glass</p>
+        - Melhoria no layout mobile<br/>
+        - Countdown com fundo branco e glass<br/>
+        - Cardio com nova imagem<br/>
+        - Confetes ao concluir</p>
+        <hr/>
+        <p><strong>Versão 1.2.3</strong><br/>
+        - Botões do mobile sem texto, somente ícones<br/>
+        - Último Exercício em duas linhas<br/>
+        - Nome de exercício em bold no tracker, tempo normal<br/>
+        - Novo botão “Exportar” na modal de Parabéns<br/>
+        - Botão “Changelog” no header<br/>
+        - Ajustes no tamanho de fonte para “Exercício” e “Descanso” (12px)</p>
+        <hr/>
+        <p><strong>Versão 1.3.0</strong><br/>
+        - Favicon e thumbnail para redes sociais<br/>
+        - Botões das modais no mesmo padrão dos botões “Treino A/B”<br/>
+        - “Último Exercício” em bold<br/>
+        - Pequena borda cinza nos botões<br/>
+        - Layout do Desktop igual ao Mobile nos textos<br/>
+        - Confirmação no botão “Encerrar”<br/>
+        - Fundo desfocado na modal de Parabéns<br/>
+        - Nova lógica do botão Gymrats<br/>
+        - Etc.
+        </p>
       </div>
-      <button onclick="fecharChangelog()">Fechar</button>
+      <button class="round-btn" onclick="fecharChangelog()">Fechar</button>
     </div>
   </div>
 
@@ -92,16 +117,14 @@
       <!-- Timers Desktop -->
       <div class="timers-desktop">
         <div class="timerBoxContainer">
-          <!-- Exercicio (texto 12px e bold) + tempo maior -->
+          <div class="timerLabelDesktop">Exercício</div>
           <div class="timerValue exercise" id="exerciseTimer">
-            <strong style="font-size:12px;">Exercício</strong><br/>
             <span id="exerciseTimeValue">00:00</span>
           </div>
         </div>
         <div class="timerBoxContainer">
-          <!-- Descanso -->
+          <div class="timerLabelDesktop">Descanso</div>
           <div class="timerValue rest" id="restTimer">
-            <strong style="font-size:12px;">Descanso</strong><br/>
             <span id="restTimeValue">00:00</span>
           </div>
         </div>
@@ -109,16 +132,18 @@
 
       <!-- Último Exercício -->
       <div class="lastLineDesktop" id="lastExerciseTime">
-        Último Exercício:<br/>
+        <strong>Último Exercício:</strong><br/>
         --
       </div>
 
       <div class="desktop-buttons">
         <button class="desktop-btn" id="playPauseBtn">▶ Iniciar</button>
+        <!-- STOP com confirmação -->
         <button class="desktop-btn" id="stopBtn">⏹ Encerrar</button>
         <div class="divider"></div>
         <button class="desktop-btn" id="trackerDesktopBtn">Tracker</button>
-        <button class="desktop-btn" id="exportDesktopBtn">⬇ Exportar</button>
+        <!-- Retirado ícone '⬇' -->
+        <button class="desktop-btn" id="exportDesktopBtn">Exportar</button>
       </div>
 
       <!-- TRACKER DESKTOP -->
@@ -131,7 +156,6 @@
     <!-- MAIN CONTENT (Treinos) -->
     <div class="main-content">
       <nav>
-        <!-- Treino A ativo (sem cor de fundo especial) -->
         <button onclick="mostrarTreino('treinoA')" class="activeBtn">Treino A</button>
         <button onclick="mostrarTreino('treinoB')">Treino B</button>
       </nav>
@@ -388,7 +412,6 @@
   <div class="bottom-bar" id="mobileBar">
     <div class="timers-mobile">
       <div class="timerBoxMobile">
-        <!-- Exercicio no mesmo bloco -->
         <div class="timerLabelMobile" style="font-size:12px;font-weight:bold;">Exercício</div>
         <div class="timerValueMobile exercise" id="exerciseTimerMobile">00:00</div>
       </div>
@@ -398,13 +421,13 @@
       </div>
     </div>
     <div class="lastLineMobile" id="lastExerciseTimeMobile">
-      Último Exercício:<br/>
+      <strong>Último Exercício:</strong><br/>
       --
     </div>
 
     <div class="mobile-row">
-      <!-- Somente ícone (sem texto) -->
       <button class="mobile-btn" id="playPauseBtnMobile">▶</button>
+      <!-- STOP com confirmação -->
       <button class="mobile-btn" id="stopBtnMobile">⏹</button>
     </div>
 
