--- a/index.html
+++ b/index.html
@@ -106,9 +106,11 @@
         </p>
         <hr/>
         <p><strong>Versão 1.4.0</strong><br/>
-        - Atualização de versão e changelog<br/>
-        - Melhorias gerais no código<br/>
-        - Correções de bugs
+        - Persistência de dados utilizando Local Storage
+        - Restabelecimento do estado do treino ao recarregar a página
+        - Salvamento automático após interações relevantes
+        - Correção de comportamento dos contadores ao pausar e recarregar a página
+        - Limpeza do Local Storage ao encerrar o treino
         </p>
       </div>
       <button class="round-btn" onclick="fecharChangelog()">Fechar</button>
