--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
         </p>
         <hr/>
         <p><strong>Versão 1.4.0</strong><br/>
-        - Persistência de dados utilizando Local Storage
-        - Restabelecimento do estado do treino ao recarregar a página
-        - Salvamento automático após interações relevantes
-        - Correção de comportamento dos contadores ao pausar e recarregar a página
-        - Limpeza do Local Storage ao encerrar o treino
+        - Persistência de dados utilizando Local Storage<br/>
+        - Restabelecimento do estado do treino ao recarregar a página<br/>
+        - Salvamento automático após interações relevantes<br/>
+        - Correção de comportamento dos contadores ao pausar e recarregar a página<br/>
+        - Limpeza do Local Storage ao encerrar o treino<br/>
         </p>
       </div>
       <button class="round-btn" onclick="fecharChangelog()">Fechar</button>
