--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <p>Não esqueça de tirar uma foto, afinal se não tem foto, não conta!</p>
       <button class="round-btn" onclick="exportarCSV()">Exportar</button>
       <button class="round-btn" onclick="fecharCongrats()">Fechar</button>
-      <button class="round-btn" onclick="abrirCamera()">Abrir Câmera</button>
+      <button class="round-btn" onclick="abrirCameraFullscreen()">Abrir Câmera</button>
     </div>
   </div>
 
@@ -451,6 +451,14 @@
   <div class="lightbox" id="lightbox">
     <button class="close-btn" onclick="fecharLightbox()">X</button>
     <img id="lightboxImg" src="" alt="Exercício"/>
+  </div>
+
+  <!-- Adicionar elementos de controle da câmera -->
+  <div id="cameraControls" style="display: none;">
+    <button id="photoButton">📸</button>
+    <button id="videoButton">🎥</button>
+    <button id="switchButton">🔄</button>
+    <button id="closeButton">❌</button>
   </div>
 
   <!-- Script JS -->
