--- a/index.html
+++ b/index.html
@@ -457,8 +457,8 @@
 
   <!-- Adicionar elementos de controle da câmera -->
   <div id="cameraControls" style="display: none;">
+    <input type="file" accept="image/*" capture="environment" id="cameraInput" style="display: none;">
     <button id="photoButton">📸</button>
-    <button id="videoButton">🎥</button>
     <button id="switchButton">🔄</button>
     <button id="closeButton">❌</button>
   </div>
