--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>Treino Monstro v1.4.0</title>
+  <title>Treino Monstro v1.5.2</title>
 
   <!-- Favicon -->
   <link rel="icon" href="favicon.png" type="image/png" />
@@ -26,7 +26,7 @@
   <!-- HEADER FLUTUANTE -->
   <header id="mainHeader">
     <div class="header-title">
-      Treino Monstro <span class="header-version">v1.4.0</span>
+      Treino Monstro <span class="header-version">v1.5.2</span>
     </div>
     <div class="brand-buttons">
       <!-- Botão "Changelog" com ícone -->
@@ -128,6 +128,13 @@
         - Salvamento automático após interações relevantes<br/>
         - Correção de comportamento dos contadores ao pausar e recarregar a página<br/>
         - Limpeza do Local Storage ao encerrar o treino<br/>
+        </p>
+        <hr/>
+        <p><strong>Versão 1.5.2</strong><br/>
+        - Ajuste na disposição dos botões de download e compartilhar na modal de Parabéns<br/>
+        - Adição de modal para Countdown de início de treino<br/>
+        - Confetes trazidos para frente do blur<br/>
+        - Ajustes no estilo da modal de Countdown<br/>
         </p>
       </div>
       <button class="round-btn" onclick="fecharChangelog()">Fechar</button>
@@ -430,7 +437,7 @@
   </div>
 
   <footer>
-    <p>Treino Monstro v1.4.0</p>
+    <p>Treino Monstro v1.5.2</p>
   </footer>
 
   <!-- BOTTOM BAR (MOBILE) -->
